Adds jest ts-jest tests

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bem-class-gen",
   "version": "1.0.0",
   "description": "A utility to generate BEM and bootstrap class names with ease",
-  "main": "index.js",
+  "main": "lib/bootstrap.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest __tests__"
   },
   "repository": {
     "type": "git",
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "BEM",
+    "classnames", 
     "bootstrap"
   ],
   "author": "Suhail Abood <suhail.abood@gmail.com>",
