--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
     "compilerOptions": {
         "rootDir": "./src", 
         "outDir": "./lib", 
+        "declaration": true,
         "module": "commonjs", 
         "target": "es5"
     },
     "exclude": [
+        "lib",
+        "__tests__",
         "node_modules"
     ]
 }
